# jollypad

./: .gitignore  CLAUDE.md  Cargo.toml  cleanup_and_start.sh  refact.md  start_service.sh
.ci/: package_deb.sh
.ci/debian/: control
.ci/wayland-sessions/: jollypad.desktop
apps/debug/: Cargo.toml
apps/debug/src/: main.rs
apps/home/: Cargo.toml  build.rs
apps/home/src/: main.rs
apps/home/ui/: main.slint
apps/launcher/: Cargo.toml
apps/launcher/src/: main.rs  startup.rs
apps/nav/: Cargo.toml  build.rs
apps/nav/src/: main.rs
apps/nav/ui/: nav.slint
apps/settings/: Cargo.toml  build.rs
apps/settings/src/: main.rs
apps/settings/ui/: settings.slint
config/: default.toml
crates/core/: Cargo.toml
crates/core/src/: catacomb_client.rs  clients.rs  game_launcher.rs  ipc.rs  lib.rs  pad.rs  shell.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/ui-kit/: Cargo.toml  build.rs
crates/ui-kit/ui/: lib.slint  pad.slint  styles.slint  types.slint
jolly-launcher/: Cargo.toml
scripts/: dev.sh  jollypad-dev.desktop
