[workspace]
resolver = "2"

members = [
    "crates/catacomb",
    "crates/ipc",
    "crates/core",
    "crates/ui-kit",
    "apps/home",
    "apps/nav",
    "apps/settings",
    "apps/launcher",
    "apps/debug",
]

# Limit default build set when running `cargo build` at the workspace root.
# This way, a plain `cargo build --release`会只构建这些应用与其依赖。
default-members = [
    "apps/launcher",
    "apps/home",
    "apps/nav",
    "apps/settings",
]
