[package]
name = "jollypad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
catacomb_ipc = { path = "../ipc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0" # For locating config
xdg = "3.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
anyhow = "1.0"
shell-words = "1.1.0"
